更新声明为<html lang="zh"> 更新lay-verify，lay-filter，lay-submit不再提示警告

--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="loginHtml">
+<html class="loginHtml" lang="zh">
 <head>
     <meta charset="utf-8">
     <title>登录--两盈科技</title>
@@ -16,7 +16,7 @@
 <body class="loginBody">
 <form class="layui-form">
     <!--<div class="login_face"><img src="images/logo.jpg" class="userAvatar"></div>-->
-    <img src="images/login.png" id="logo">
+    <img src="images/login.png" id="logo" alt="两盈科技logo">
     <div class="layui-form-item input-item">
         <label for="userName">手机号</label>
         <input type="text" placeholder="请输入手机号" autocomplete="off" id="userName" class="layui-input"
