--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
             <a href="javascript:;" class="seraph hideMenu icon-caidan"></a>
             <!-- 顶级菜单 -->
             <ul class="layui-nav mobileTopLevelMenus" mobile>
-                <li class="layui-nav-item" data-menu="contentManagement">
+                <li class="layui-nav-item" data-menu="navs1">
                     <a href="javascript:;"><i class="seraph icon-caidan"></i><cite>主菜单</cite></a>
                     <dl class="layui-nav-child">
-                        <dd class="layui-this" data-menu="contentManagement"><a href="javascript:;"><i
+                        <dd class="layui-this" data-menu="navs1"><a href="javascript:;"><i
                                 class="layui-icon" data-icon="&#xe63c;">&#xe63c;</i><cite>金融贷款</cite></a></dd>
-                        <dd data-menu="memberCenter"><a href="javascript:;"><i class="seraph icon-icon10"
+                        <dd data-menu="navs2"><a href="javascript:;"><i class="seraph icon-icon10"
                                                                                data-icon="icon-icon10"></i><cite>空号检测</cite></a>
                         </dd>
                     </dl>
                 </li>
             </ul>
             <ul class="layui-nav topLevelMenus" pc>
-                <li class="layui-nav-item layui-this" data-menu="contentManagement">
+                <li class="layui-nav-item layui-this" data-menu="navs1">
                     <a href="javascript:;"><i class="layui-icon" data-icon="&#xe63c;">&#xe63c;</i><cite>金融贷款</cite></a>
                 </li>
-                <li class="layui-nav-item" data-menu="memberCenter" pc>
+                <li class="layui-nav-item" data-menu="navs2" pc>
                     <a href="javascript:;"><i class="seraph icon-icon10"
                                               data-icon="icon-icon10"></i><cite>空号检测</cite></a>
                 </li>
@@ -101,10 +101,8 @@
                 <li class="layui-nav-item">
                     <a href="javascript:;"><i class="layui-icon caozuo">&#xe643;</i> 页面操作</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" class="refresh refreshThis"><i class="layui-icon">&#x1002;</i>
-                            刷新当前</a></dd>
-                        <dd><a href="javascript:;" class="closePageOther"><i class="seraph icon-prohibit"></i> 关闭其他</a>
-                        </dd>
+                        <dd><a href="javascript:;" class="refresh refreshThis"><i class="layui-icon">&#xe9aa;</i> 刷新当前</a></dd>
+                        <dd><a href="javascript:;" class="closePageOther"><i class="seraph icon-prohibit"></i> 关闭其他</a></dd>
                         <dd><a href="javascript:;" class="closePageAll"><i class="seraph icon-guanbi"></i> 关闭全部</a></dd>
                     </dl>
                 </li>
