--- a/index.html
+++ b/index.html
@@ -27,28 +27,24 @@
                 <li class="layui-nav-item" data-menu="navs1">
                     <a href="javascript:;"><i class="seraph icon-caidan"></i><cite>主菜单</cite></a>
                     <dl class="layui-nav-child">
-                        <dd class="layui-this" data-menu="navs1"><a href="javascript:;"><i
-                                class="layui-icon" data-icon="&#xe63c;">&#xe63c;</i><cite>金融贷款</cite></a></dd>
-                        <dd data-menu="navs2"><a href="javascript:;"><i class="seraph icon-icon10"
-                                                                               data-icon="icon-icon10"></i><cite>空号检测</cite></a>
+                        <dd class="layui-this" data-menu="navs1"><a href="javascript:;"><i class="seraph layui-icon layui-icon-rmb"></i><cite>金融贷款</cite></a></dd>
+                        <dd data-menu="navs2"><a href="javascript:;"><i class="seraph layui-icon layui-icon-cellphone"></i><cite>空号检测</cite></a>
                         </dd>
                     </dl>
                 </li>
             </ul>
             <ul class="layui-nav topLevelMenus" pc>
                 <li class="layui-nav-item layui-this" data-menu="navs1">
-                    <a href="javascript:;"><i class="layui-icon" data-icon="&#xe63c;">&#xe63c;</i><cite>金融贷款</cite></a>
+                    <a href="javascript:;"><i class="seraph layui-icon layui-icon-rmb"></i><cite>金融贷款</cite></a>
                 </li>
                 <li class="layui-nav-item" data-menu="navs2" pc>
-                    <a href="javascript:;"><i class="seraph icon-icon10"
-                                              data-icon="icon-icon10"></i><cite>空号检测</cite></a>
+                    <a href="javascript:;"><i class="seraph layui-icon layui-icon-cellphone"></i><cite>空号检测</cite></a>
                 </li>
             </ul>
             <!-- 顶部右侧菜单 -->
             <ul class="layui-nav top_menu">
                 <li class="layui-nav-item" pc>
-                    <a href="javascript:;" class="clearCache"><i class="layui-icon"
-                                                                 data-icon="&#xe640;">&#xe640;</i><cite>清除缓存</cite></a>
+                    <a href="javascript:;" class="clearCache"><i class="layui-icon layui-icon-delete"></i><cite>清除缓存</cite></a>
                 </li>
                 <li class="layui-nav-item lockcms" pc>
                     <a href="javascript:;"><i class="seraph icon-lock"></i><cite>锁屏</cite></a>
@@ -63,7 +59,7 @@
                         <dd><a href="javascript:;" class="changePwd"><i class="seraph icon-xiugai"
                                                                         data-icon="icon-xiugai"></i><cite>修改密码</cite></a>
                         </dd>
-                        <dd pc><a href="javascript:;" class="functionSetting"><i class="layui-icon">&#xe620;</i><cite>功能设定</cite><span
+                        <dd pc><a href="javascript:;" class="functionSetting"><i class="layui-icon layui-icon-set"></i><cite>功能设定</cite><span
                                 class="layui-badge-dot"></span></a></dd>
                         <dd pc><a href="javascript:;" class="changeSkin"><i
                                 class="layui-icon">&#xe61b;</i><cite>更换皮肤</cite></a></dd>
